--- a/frontend/components/rules.css
+++ b/frontend/components/rules.css
@@ -66,22 +66,22 @@ body {
     color: #222;
 }
 
-.regras-navio .numero {
+regras-navio .numero {
     background-color: #ffc700;
     font-weight: 700;
-    size: 14px;
+    font-size: 12px;
     line-height: 24px;
-    letter-spacing: 0%;
-    border-radius: 50%;
-    border: 2px solid black;
+    letter-spacing: 0;
+    border: 1px solid black;
     border-right: 3px solid black;
     border-bottom: 3px solid black;
-    border-radius: 99px;
-    width: 20px;
-    height: 20px;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .regras-navio span {
@@ -104,28 +104,73 @@ body {
   .bloco {
     width: 24px;
     height: 24px;
+    background-color: white;
+    border: 1.5px solid black;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.288);
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+}
+  
+.frente {
+    border-radius: 8px;
+    position: relative;
+    background-color: white;
+}
+.frente::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 90%;
+    height: 15px;
+    border-radius: 8px 0 0 8px;
     background-color: black;
-    border: 2px solid white;
-  }
-  
-  .frente {
-    border-radius: 12px 0 0 12px;
-  }
-  
-  .meio {
-    border-radius: 0;
-  }
-  
-  .traseira {
-    border-radius: 0 12px 12px 0;
-  }
-  
-  .unico {
-    width: 24px;
-    height: 32px;
-    top: 90px;
-    left: 29px;
-    border-radius: 20px;
-    transform: rotate(90deg);
-  }
-  
+    transform: translateY(-50%);
+}
+.meio {
+    border-radius: 8px;
+    position: relative;
+    background-color: white;
+}
+.meio::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 15px;
+    background-color: black;
+    transform: translateY(-50%);
+}
+.traseira {
+    border-radius: 8px;
+    position: relative;
+    border-radius: 8px;
+    background-color: white;
+}
+.traseira::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 90%;
+    height: 15px;
+    border-radius: 0 8px 8px 0px;
+    background-color: black;
+    transform: translateY(-50%);
+}
+.unico {
+    border-radius: 8px;
+    position: relative;
+}
+.unico::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    width: 80%;
+    height: 15px;
+    background-color: black;
+    transform: translateY(-50%);
+    border-radius: 8px;
+}
