--- a/frontend/components/rules.css
+++ b/frontend/components/rules.css
@@ -66,7 +66,7 @@ body {
     color: #222;
 }
 
-regras-navio .numero {
+.regras-navio .numero {
     background-color: #ffc700;
     font-weight: 700;
     font-size: 12px;
