--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
     text-align: center;
-    font-family: 'Arial', sans-serif;
-    color:navy
+    font-family: "Inria Sans", sans-serif;
 }
 
 #restart-btn{
