--- a/frontend/components/rules.css
+++ b/frontend/components/rules.css
@@ -1,15 +1,4 @@
-/*
-body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    background-color: #4e8fda; 
-    display: flex;
-    align-items: center;     
-    justify-content: flex-start; 
-    font-family: Inter, sans-serif;
-}
-*/
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 .regras-container {
     width: auto;
@@ -25,6 +14,7 @@ body {
     border-bottom: 5px solid black; /* mais grosso embaixo */
     position: relative;
     margin-top: 25px;
+    font-family: Inria Sans, sans-serif;
 }
 
 .regras-titulo {
