--- a/frontend/components/board.html
+++ b/frontend/components/board.html
@@ -81,8 +81,8 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell hit"></div>
-        <div class="cell hit"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
